--- a/website/templates/patientmedinfo-attachments.html
+++ b/website/templates/patientmedinfo-attachments.html
@@ -57,7 +57,7 @@
             </tr>
             {% endfor %}
             {% else %}
-            no attachements
+            no attachments
             {% endif %}
         </tbody>
     </table>
