--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -25,7 +25,7 @@
             <div< class="dashboard-consultations">
                 <h4><i class="bi patienticon bi-clipboard2-pulse"></i></h4>
                 <div class="mt-2">
-                    <span style="font-size: 12px">CONSULTATIONS</span>
+                    <span style="font-size: 12px">TODAYS' CONSULTATIONS</span>
                     <h3>{{consultationscount}}</h3>
                     <div></div>
                 </div>
