--- a/website/templates/medications.html
+++ b/website/templates/medications.html
@@ -20,7 +20,7 @@
 
     <div class="row m-3">
       <div class="col-md-4">
-       <label class="form-label">Medicine/Brand/Si</label>
+       <label class="form-label">Medicine/Brand</label>
        <input type="text" class="form-control  mt-2" placeholder="medicine name" name="medname">
      </div>
      <div class="col-md-4">
