--- a/website/templates/patientmedinfo-attachments.html
+++ b/website/templates/patientmedinfo-attachments.html
@@ -47,7 +47,7 @@
                 <td>{{a.name}}</td>
                 
                 <td>
-                    {% if a.atype == "image" %}
+                    {% if a.atype == "Image" %}
                     <img src="{{a.fileattachments.url}}"  width="50"></img>
                     {% else %}
                     Video File
