--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -52,7 +52,7 @@
             {% endfor %}
            
         </table>
-        <tr><a href="#" class="link-primary"> . . . see more</a></tr>
+        <tr><a href="{% url "activitylog" %}" class="link-primary"> . . . see more</a></tr>
     </div>
 </div>
 <!--Table container-->
