--- a/website/templates/patientmedinfo-medications.html
+++ b/website/templates/patientmedinfo-medications.html
@@ -26,6 +26,10 @@
     <a class="nav-link" href="{% url "patientmedinfo_attachments" pID patient_history.id %}">Attachments</a>
   </li>
 
+  <li class="nav-item">
+    <a class="nav-link" href="{% url "patientmedinfo_labresults" pID patient_history.id %}">Lab Results</a>
+  </li>
+
 </ul>
 
 <!-- PRESCRIPTION FORM-->
