--- a/website/templates/patientmedinfo-attachments.html
+++ b/website/templates/patientmedinfo-attachments.html
@@ -24,7 +24,9 @@
     <li class="nav-item">
       <a class="nav-link active" href="{% url "patientmedinfo_attachments" pID patient_history.id %}">Attachments</a>
     </li>
-   
+    <li class="nav-item">
+        <a class="nav-link " href="{% url "patientmedinfo_labresults" pID patient_history.id %}">Lab Results</a>
+      </li>
   </ul>
 
 
