--- a/website/templates/patientmedinfo-geninfo.html
+++ b/website/templates/patientmedinfo-geninfo.html
@@ -24,6 +24,9 @@
     <li class="nav-item">
       <a class="nav-link" href="{% url "patientmedinfo_attachments" pID patient_history.id %}">Attachments</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url "patientmedinfo_labresults" pID patient_history.id %}">Lab Results</a>
+      </li>
    
   </ul>
  {% comment %} <div class="title-form"></div>  {% endcomment %}
